@@ -6,6 +6,8 @@ Gora Change Log
 
 0.3 (trunk) Current Development:
 
+* GORA-133 & 63 GoraCompiler cannot compile array type & bin/compile-examples.sh does not work respectively (enis, Kazuomi Kashii via lewismc)
+
 * GORA-129 redundant conf field in HBaseStore (ferdy)
 
 * GORA-123 Append correct submodule directories to SCM paths in submodule pom's (lewismc)
